2016-02-01 Fred Gleason <fredg@paravelsystems.com>
	* Added code in 'src/glassplayer/conn_hls.cpp' and
	'src/glassplayer/conn_hls.h' to update the index file automatically.
2016-02-03 Fred Gleason <fredg@paravelsystems.com>
	* Implemented audio playout from HLS streams.
2016-02-04 Fred Gleason <fredg@paravelsystems.com>
	* Implemented support for HTTP redirection in
	'src/glassplayer/serverid.cpp' and 'src/glassplayer/serverid.h'.
2016-02-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/conn_xcast.cpp' that caused
	glitching in Shoutcast streams containing live metadata updates.
2016-02-05 Fred Gleason <fredg@paravelsystems.com>
	* Refactored metadata processing so as to emit updates in realtime
	sync with audio playout.
2016-02-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a '--stats-out' option.
2016-02-08 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked the --stats-out parameters for the AAC codec in
	'src/glassplayer/codec_fdk.cpp' and 'src/glassplayer/codec_fdk.h'.
2016-02-08 Fred Gleason <fredg@paravelsystems.com>
	* Implemented --stats-out parameters for the Connector classes.
2016-02-08 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/serverid.cpp' that caused playout
	to fail with non-extended M3U lists containing multiple URLs.
2016-02-08 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'DeviceType' stat to the audio device statistics.
2016-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'Connector::hostHostname()', 'Connector::hostPort()' and
	'Connector::setError()' methods in 'src/common/connector.cpp' and
	'src/common/connector.h'.
	* Fixed a bug in 'src/glassplayer/conn_xcast.cpp' that generated a
	malformed HTTP request.
2016-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Codec::writePcm()' method in 'src/common/codec.cpp' and
	'src/common/codec.h'.
	* Removed the 'Codec::signalAudioWritten()' method in
	'src/common/codec.cpp' and 'src/common/codec.h'.