@@ -18,6 +18,7 @@
 //   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 //
 
+#include "conn_file.h"
 #include "conn_hls.h"
 #include "conn_xcast.h"
 #include "connectorfactory.h"
@@ -33,6 +34,10 @@ Connector *ConnectorFactory(Connector::ServerType type,QObject *parent)
 
   case Connector::XCastServer:
     conn=new XCast(parent);
+    break;
+
+  case Connector::FileServer:
+    conn=new File(parent);
     break;
 
   case Connector::LastServer:
