@@ -156,3 +156,7 @@
 	'src/common/codec.h'.
 	* Removed the 'Codec::signalAudioWritten()' method in
 	'src/common/codec.cpp' and 'src/common/codec.h'.
+2016-02-09 Fred Gleason <fredg@paravelsystems.com>
+	* Removed the 'hostname' and 'port' parameters from the
+	'Connector::connectToHostConnector()' method in
+	'src/common/connector.cpp' and 'src/common/connector.h'.
